--- a/css/style.css
+++ b/css/style.css
@@ -21,7 +21,7 @@ li {
 }
 
 .container {
-    width: 90%;
+    max-width: 1150px;
     margin: 0 auto;
 }
 
@@ -38,7 +38,10 @@ header {
     box-shadow: 0 1px 5px 0 rgba(0,0,0,0.3);
 }
 
-header .container {
+header .container-header {
+    width: 90%;
+    max-width: 1190px;
+    margin: 0 auto;
     display: flex;
     justify-content: space-between;
     align-items: center;
@@ -166,31 +169,4 @@ nav.show li {
     top: 10px;
     right: 10px;
     cursor: pointer;
-}
-
-
-
-@media screen and (max-width:1000px){
-     nav ul li a {
-         font-size: 0.8em;
-     }   
-
-
-    .header-right input {
-        width: 105px;
-    }
-}
-
-@media screen and (max-width: 678px){
-    nav {
-        display: none;
-    }
-
-    .header-menu {
-        display: block;
-    }
-
-    .header-right input {
-        width: 250px;
-    }
 }
