Create a About section and add a button on home section

--- a/css/responsive.css
+++ b/css/responsive.css
@@ -34,6 +34,21 @@
     .home-right img {
         width: 400px;
     }
+
+    .about-content {
+        flex-direction: row;
+        text-align: left;
+    }
+
+    .about-image {
+        margin: 18px 0 0 0;
+        padding: 0;
+    }
+
+    .heading {
+        margin-top: -100px;
+        margin-bottom: 50px;
+    }
 }
 
 @media screen and (max-width: 678px){
@@ -66,4 +81,18 @@
     .home-right img {
         width: 600px;
     }
+
+    .about {
+        margin-top: 1px;
+        font-size: 1.2em;
+    }
+
+    .about-image {
+       padding-top: 30px;
+    }
+
+    .about-image img {
+        width: 300px;
+    }
+
 }
