--- a/css/style.css
+++ b/css/style.css
@@ -256,9 +256,7 @@ nav.show li {
     position: absolute;
     bottom: -10px;
     left: 0;
-    /* border: 1px solid black; */
     width: 100%;
-    /* height: 20%; */
 }
 
 .home-wave img {
@@ -376,4 +374,55 @@ nav.show li {
 
 .progress .javascript {
     width: 30%;
+}
+
+/* WORKS */
+
+.works {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    position: relative;
+}
+
+.works-wave {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+}
+
+.works-wave img {
+    display: inline-block;
+    width: 100%;
+    height: 100%;
+    transform: rotate(180deg);
+}
+
+.works .container {
+    width: 80%;
+}
+
+.works-content {
+    padding: 10px 0;
+    display: flex;
+    flex-direction: column;
+}
+
+.work-card {
+    width: 80%;
+    padding: 30px 20px 10px 20px;
+    text-align: center;
+    border-radius: 5px;
+    margin: 10px auto;
+}
+
+.work-card img {
+    width: 90%;
+    border-radius: 20px;
+    box-shadow: 2px 2px 10px rgba(0, 0, 0, 0.3);
+}
+
+.work-card p {
+    font-size: 0.8em;
 }
